fix: reduce paragraph spacing in service tabs and increase icon spacing

--- a/css/style.css
+++ b/css/style.css
@@ -752,10 +752,12 @@ form label {
 }
 .feature-left .icon {
   float: left;
-  margin-right: 5%;
+  margin-right: 10%;
   display: table;
   text-align: center;
-  padding-left: 15px; /* Added left padding for desktop */
+  padding-left: 25px;
+  position: relative;
+  top: 5px;
 }
 @media screen and (max-width: 768px) {
   .feature-left .icon {
@@ -783,8 +785,8 @@ form label {
   margin-top: 10px;
 }
 #gtco-services .feature-left p {
-  line-height: 1.4;
-  margin-bottom: 15px;
+  line-height: 1.3;
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 768px) {
   .feature-left .feature-copy {
